--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,4 @@
 include README.rst
 include LICENSE
-include examples/example.mo
-include examples/example.ipynb
-include examples/cplex_example.ipynb
+include examples/simple_space_heating_mpc.ipynb
+include examples/cplex_api.ipynb
